compiler/driver/tests/snapshots/fixtures__m5-arrays__array-basics.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== ast ==
SourceFile
    @Intrinsic("rt_print")
  fun print(message: String)
    @Intrinsic("rt_println")
  fun println(message: String)
SourceFile
  enum Option<T>
    Some(T)
    None
SourceFile
  fun main()
    val a
      ArrayLiteral
        IntLiteral 1
        IntLiteral 2
        IntLiteral 3
    Call println
      Binary Add
        Index
          Var a
          IntLiteral 0
        FieldAccess size
          Var a
    val m: MutableArray<Int>
      ArrayLiteral
        IntLiteral 4
        IntLiteral 5
    assign []
      Var m
      IntLiteral 0
      IntLiteral 40
    Call println
      Index
        Var m
        IntLiteral 0
    val b
      Call Array
        Var m
    assign []
      Var m
      IntLiteral 0
      IntLiteral 99
    Call println
      Index
        Var b
        IntLiteral 0
    val e: Array<Int>
      ArrayLiteral
    Call println
      FieldAccess size
        Var e

== hir ==
Module
  enum Option<T>
    Some(_1: T0)
    None()
  fun print(): Unit <intrinsic rt_print>
  fun println(): Unit <intrinsic rt_println>
  fun main(): Unit
    val local0
      ArrayLiteral : Array<Int>
        IntLiteral 1 : Int
        IntLiteral 2 : Int
        IntLiteral 3 : Int
    Call println : Unit
      Binary Add : Int
        Index : Int
          Local a : Array<Int>
          IntLiteral 0 : Int
        ArrayLen : Int
          Local a : Array<Int>
    val local1
      ArrayLiteral : MutableArray<Int>
        IntLiteral 4 : Int
        IntLiteral 5 : Int
    assign []
      Local m : MutableArray<Int>
      IntLiteral 0 : Int
      IntLiteral 40 : Int
    Call println : Unit
      Index : Int
        Local m : MutableArray<Int>
        IntLiteral 0 : Int
    val local2
      ArrayClone : Array<Int>
        Local m : MutableArray<Int>
    assign []
      Local m : MutableArray<Int>
      IntLiteral 0 : Int
      IntLiteral 99 : Int
    Call println : Unit
      Index : Int
        Local b : Array<Int>
        IntLiteral 0 : Int
    val local3
      ArrayLiteral : Array<Int>
    Call println : Unit
      ArrayLen : Int
        Local e : Array<Int>
  entry main

== mir ==
Module
  fun main @scoop_main() -> Unit
    val a: Array<Int>
      ArrayLiteral
        IntLiteral 1
        IntLiteral 2
        IntLiteral 3
    Call @scoop_rt_println_int direct
      Binary IntAdd
        ArrayGet
          Local a
          IntLiteral 0
        ArrayLen
          Local a
    val m: MutableArray<Int>
      ArrayLiteral
        IntLiteral 4
        IntLiteral 5
    array_set
      Local m
      IntLiteral 0
      IntLiteral 40
    Call @scoop_rt_println_int direct
      ArrayGet
        Local m
        IntLiteral 0
    val b: Array<Int>
      ArrayClone
        Local m
    array_set
      Local m
      IntLiteral 0
      IntLiteral 99
    Call @scoop_rt_println_int direct
      ArrayGet
        Local b
        IntLiteral 0
    val e: Array<Int>
      ArrayLiteral
    Call @scoop_rt_println_int direct
      ArrayLen
        Local e
  entry @scoop_main

== lir ==
Module
  fun @scoop_main() -> void
    local %0 a: [i64]
    local %1 m: [i64]
    local %2 b: [i64]
    local %3 e: [i64]
  block entry
    t0 = array_alloc (1, 2, 3) : [i64]
    store t0 -> local0
    t1 = array_get local0 0 : i64
    t2 = array_len local0 : i64
    t3 = Add t1, t2 : i64
    call @scoop_rt_println_int(t3)
    t4 = aggregate () : {}
    t5 = array_alloc (4, 5) : [i64]
    store t5 -> local1
    array_set local1 0 40
    t6 = array_get local1 0 : i64
    call @scoop_rt_println_int(t6)
    t7 = aggregate () : {}
    t8 = array_clone local1 : [i64]
    store t8 -> local2
    array_set local1 0 99
    t9 = array_get local2 0 : i64
    call @scoop_rt_println_int(t9)
    t10 = aggregate () : {}
    t11 = array_alloc () : [i64]
    store t11 -> local3
    t12 = array_len local3 : i64
    call @scoop_rt_println_int(t12)
    t13 = aggregate () : {}
    ret
  layout String size=16 align=8 refs=[]
  layout Int size=8 align=8 refs=[]
  layout Boolean size=1 align=1 refs=[]
  layout Array<Int> size=8 align=8 array(element_is_ref=false)
  layout MutableArray<Int> size=8 align=8 array(element_is_ref=false)
  entry @scoop_main

== run ==
4
40
40
0
