compiler/driver/tests/snapshots/fixtures__m5-arrays__array-elements.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== ast ==
SourceFile
    @Intrinsic("rt_print")
  fun print(message: String)
    @Intrinsic("rt_println")
  fun println(message: String)
SourceFile
  enum Option<T>
    Some(T)
    None
SourceFile
  struct Point
    field x: Int
    field y: Int
  enum E
    Empty
    One(Int)
  fun main()
    val ps
      ArrayLiteral
        Call Point
          IntLiteral 1
          IntLiteral 2
        Call Point
          IntLiteral 3
          IntLiteral 4
    Call println
      FieldAccess x
        Index
          Var ps
          IntLiteral 1
    val nested
      ArrayLiteral
        ArrayLiteral
          IntLiteral 1
          IntLiteral 2
        ArrayLiteral
          IntLiteral 3
    Call println
      Index
        Index
          Var nested
          IntLiteral 0
        IntLiteral 1
    val es
      ArrayLiteral
        MethodCall One
          Var E
          IntLiteral 1
        FieldAccess Empty
          Var E
    when
      Index
        Var es
        IntLiteral 0
      arm One(v)
        Call println
          Var v
      arm Empty
        Call println
          StringLiteral "empty"
    val opts: Array<Int?>
      ArrayLiteral
        Call Some
          IntLiteral 1
        Var None
    Call println
      Elvis
        Index
          Var opts
          IntLiteral 0
        IntLiteral 9
    Call println
      Elvis
        Index
          Var opts
          IntLiteral 1
        IntLiteral 8

== hir ==
Module
  struct Point
    field x: Int
    field y: Int
  enum Option<T>
    Some(_1: T0)
    None()
  enum E
    Empty()
    One(_1: Int)
  fun print(): Unit <intrinsic rt_print>
  fun println(): Unit <intrinsic rt_println>
  fun main(): Unit
    val local0
      ArrayLiteral : Array<Point>
        StructInit Point : Point
          IntLiteral 1 : Int
          IntLiteral 2 : Int
        StructInit Point : Point
          IntLiteral 3 : Int
          IntLiteral 4 : Int
    Call println : Unit
      FieldAccess field 0 : Int
        Index : Point
          Local ps : Array<Point>
          IntLiteral 1 : Int
    val local1
      ArrayLiteral : Array<Array<Int>>
        ArrayLiteral : Array<Int>
          IntLiteral 1 : Int
          IntLiteral 2 : Int
        ArrayLiteral : Array<Int>
          IntLiteral 3 : Int
    Call println : Unit
      Index : Int
        Index : Array<Int>
          Local nested : Array<Array<Int>>
          IntLiteral 0 : Int
        IntLiteral 1 : Int
    val local2
      ArrayLiteral : Array<E>
        VariantConstruct E.One : E
          IntLiteral 1 : Int
        VariantConstruct E.Empty : E
    when
      Index : E
        Local es : Array<E>
        IntLiteral 0 : Int
      arm variant1(0: local3)
        Call println : Unit
          Local v : Int
      arm variant0()
        Call println : Unit
          StringLiteral "empty" : String
    val local4
      ArrayLiteral : Array<Option<Int>>
        VariantConstruct Option.Some<Int> : Option<Int>
          IntLiteral 1 : Int
        VariantConstruct Option.None<Int> : Option<Int>
    val local5
      Index : Option<Int>
        Local opts : Array<Option<Int>>
        IntLiteral 0 : Int
    if
      IsSome : Boolean
        Local $opt.0 : Option<Int>
      val local6
        Unwrap trap=false : Int
          Local $opt.0 : Option<Int>
    else
      val local6
        IntLiteral 9 : Int
    Call println : Unit
      Local $res.1 : Int
    val local7
      Index : Option<Int>
        Local opts : Array<Option<Int>>
        IntLiteral 1 : Int
    if
      IsSome : Boolean
        Local $opt.2 : Option<Int>
      val local8
        Unwrap trap=false : Int
          Local $opt.2 : Option<Int>
    else
      val local8
        IntLiteral 8 : Int
    Call println : Unit
      Local $res.3 : Int
  entry main

== mir ==
Module
  struct Point (x: Int, y: Int)
  enum E
    Empty()
    One(_1: Int)
  enum Option$I
    Some(_1: Int)
    None()
  fun main @scoop_main() -> Unit
    val ps: Array<Point>
      ArrayLiteral
        StructInit Point
          IntLiteral 1
          IntLiteral 2
        StructInit Point
          IntLiteral 3
          IntLiteral 4
    Call @scoop_rt_println_int direct
      FieldAccess 0
        ArrayGet
          Local ps
          IntLiteral 1
    val nested: Array<Array<Int>>
      ArrayLiteral
        ArrayLiteral
          IntLiteral 1
          IntLiteral 2
        ArrayLiteral
          IntLiteral 3
    Call @scoop_rt_println_int direct
      ArrayGet
        ArrayGet
          Local nested
          IntLiteral 0
        IntLiteral 1
    val es: Array<E>
      ArrayLiteral
        VariantConstruct E v1
          IntLiteral 1
        VariantConstruct E v0
    val $when.1: E
      ArrayGet
        Local es
        IntLiteral 0
    if
      Binary IntEq
        EnumTag
          Local $when.1
        IntLiteral 1
      val v: Int
        EnumField v1 f0
          Local $when.1
      Call @scoop_rt_println_int direct
        Local v
    else
      if
        Binary IntEq
          EnumTag
            Local $when.1
          IntLiteral 0
        Call @scoop_rt_println direct
          StringConst @scoop.str.0
    val opts: Array<Option$I<Int>>
      ArrayLiteral
        VariantConstruct Option$I<Int> v0
          IntLiteral 1
        VariantConstruct Option$I<Int> v1
    val $opt.0: Option$I<Int>
      ArrayGet
        Local opts
        IntLiteral 0
    if
      Binary IntEq
        EnumTag
          Local $opt.0
        IntLiteral 0
      val $res.1: Int
        EnumField v0 f0
          Local $opt.0
    else
      val $res.1: Int
        IntLiteral 9
    Call @scoop_rt_println_int direct
      Local $res.1
    val $opt.2: Option$I<Int>
      ArrayGet
        Local opts
        IntLiteral 1
    if
      Binary IntEq
        EnumTag
          Local $opt.2
        IntLiteral 0
      val $res.3: Int
        EnumField v0 f0
          Local $opt.2
    else
      val $res.3: Int
        IntLiteral 8
    Call @scoop_rt_println_int direct
      Local $res.3
  str @scoop.str.0 "empty"
  entry @scoop_main

== lir ==
Module
  global @scoop.str.0 = "empty"
  enum E tagged size=8 align=8 variants=() (i64)
  enum Option$I tagged size=8 align=8 variants=(i64) ()
  fun @scoop_main() -> void
    local %0 ps: [{i64, i64}]
    local %1 nested: [[i64]]
    local %2 es: [enum0]
    local %3 v: i64
    local %4 opts: [enum1]
    local %5 $opt.0: enum1
    local %6 $res.1: i64
    local %7 $opt.2: enum1
    local %8 $res.3: i64
    local %9 $when.1: enum0
  block entry
    t0 = aggregate (1, 2) : {i64, i64}
    t1 = aggregate (3, 4) : {i64, i64}
    t2 = array_alloc (t0, t1) : [{i64, i64}]
    store t2 -> local0
    t3 = array_get local0 1 : {i64, i64}
    t4 = extract t3, 0 : i64
    call @scoop_rt_println_int(t4)
    t5 = aggregate () : {}
    t6 = array_alloc (1, 2) : [i64]
    t7 = array_alloc (3) : [i64]
    t8 = array_alloc (t6, t7) : [[i64]]
    store t8 -> local1
    t9 = array_get local1 0 : [i64]
    t10 = array_get t9 1 : i64
    call @scoop_rt_println_int(t10)
    t11 = aggregate () : {}
    t12 = enum_wrap e0 v1 (1) : enum0
    t13 = enum_wrap e0 v0 () : enum0
    t14 = array_alloc (t12, t13) : [enum0]
    store t14 -> local2
    t15 = array_get local2 0 : enum0
    store t15 -> local9
    t16 = enum_tag e0 local9 : i64
    t17 = Eq t16, 1 : i1
    cbr t17 then @if.then.1 else @if.else.2
  block if.then.1
    t18 = enum_field e0 v1 f0 local9 : i64
    store t18 -> local3
    call @scoop_rt_println_int(local3)
    t19 = aggregate () : {}
    br @if.merge.3
  block if.else.2
    t20 = enum_tag e0 local9 : i64
    t21 = Eq t20, 0 : i1
    cbr t21 then @if.then.4 else @if.merge.5
  block if.merge.3
    t23 = enum_wrap e1 v0 (1) : enum1
    t24 = enum_wrap e1 v1 () : enum1
    t25 = array_alloc (t23, t24) : [enum1]
    store t25 -> local4
    t26 = array_get local4 0 : enum1
    store t26 -> local5
    t27 = enum_tag e1 local5 : i64
    t28 = Eq t27, 0 : i1
    cbr t28 then @if.then.6 else @if.else.7
  block if.then.4
    call @scoop_rt_println(global0)
    t22 = aggregate () : {}
    br @if.merge.5
  block if.merge.5
    br @if.merge.3
  block if.then.6
    t29 = enum_field e1 v0 f0 local5 : i64
    store t29 -> local6
    br @if.merge.8
  block if.else.7
    store 9 -> local6
    br @if.merge.8
  block if.merge.8
    call @scoop_rt_println_int(local6)
    t30 = aggregate () : {}
    t31 = array_get local4 1 : enum1
    store t31 -> local7
    t32 = enum_tag e1 local7 : i64
    t33 = Eq t32, 0 : i1
    cbr t33 then @if.then.9 else @if.else.10
  block if.then.9
    t34 = enum_field e1 v0 f0 local7 : i64
    store t34 -> local8
    br @if.merge.11
  block if.else.10
    store 8 -> local8
    br @if.merge.11
  block if.merge.11
    call @scoop_rt_println_int(local8)
    t35 = aggregate () : {}
    ret
  layout String size=16 align=8 refs=[]
  layout Int size=8 align=8 refs=[]
  layout Boolean size=1 align=1 refs=[]
  layout Point size=16 align=8 refs=[]
  layout E size=16 align=8 enum-refs=[[], []]
  layout Option$I size=16 align=8 enum-refs=[[], []]
  layout Array<Point> size=16 align=8 array(element_is_ref=false)
  layout Array<Array<Int>> size=8 align=8 array(element_is_ref=true)
  layout Array<Int> size=8 align=8 array(element_is_ref=false)
  layout Array<E> size=16 align=8 array(element_is_ref=false)
  layout Array<Option$I<Int>> size=16 align=8 array(element_is_ref=false)
  entry @scoop_main

== run ==
3
2
1
1
8
